More organization management

--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -24,3 +24,11 @@ $theme-colors: (
   padding: 2px;
   border-radius: 2px;
 }
+
+p {
+  margin-bottom: 0;
+}
+
+.markdown {
+  font-size: 0.8rem;
+}
