--- a/components/editor/Editor.module.css
+++ b/components/editor/Editor.module.css
@@ -1,8 +1,16 @@
 .RichEditorRoot {
   background: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.23);
   font-size: 14px;
   padding: 15px;
+}
+
+.RichEditorBorder {
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  border-radius: 4px;
+}
+
+.RichEditorFocusBorder {
+  border: 2px solid blue;
   border-radius: 4px;
 }
 
