--- a/components/editor/Editor.module.css
+++ b/components/editor/Editor.module.css
@@ -1,8 +1,9 @@
 .RichEditorRoot {
   background: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid rgba(0, 0, 0, 0.23);
   font-size: 14px;
   padding: 15px;
+  border-radius: 4px;
 }
 
 .RichEditor-editor {
