Recovered scrolling functionality

--- a/components/pdf-annotator/components/PdfAnnotator.module.css
+++ b/components/pdf-annotator/components/PdfAnnotator.module.css
@@ -1,8 +1,9 @@
-/* .PdfAnnotator {
+.PdfAnnotator {
+  flex: 6;
   position: relative;
   overflow: auto;
-  height: calc(100vh - 55px);
-} */
+  height: calc(100vh - 50px);
+}
 
 .PdfAnnotatorHighlightLayer {
   position: absolute;
