--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -22,11 +22,10 @@ $theme-colors: (
   border-radius: 2px;
 }
 
-p {
-  margin-bottom: 0;
-}
+
 
 .markdown {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 0.9rem;
 }
 
