--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -26,6 +26,10 @@ p {
   margin: 0;
 }
 
+body {
+  margin: 0;
+}
+
 .markdown {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
